<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lost and Found IPB</string>
    <string name="txtTogether">Together, We Help Each Other.</string>
    <string name="txtUsername">E-mail/Username</string>
    <string name="password">Password</string>
    <string name="btnLogin">Log In</string>
    <string name="txtForgot">Forgot your Password?</string>
    <string name="txtDont">Don\'t have an account?</string>
    <string name="txtRegister">Register here</string>
    <string name="txtOr">OR</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lecturer">Lecturer</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="register_now">Register Now</string>
    <string name="back_to">Back to</string>
    <string name="login">Login</string>
    <string name="page">page</string>
    <string name="logo">Logo</string>
    <string name="eye">Show password</string>
    <string name="imgLogin">Login background image</string>
    <string name="home">Home</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="profile">Profile</string>
    <string name="role">Role</string>
    <string name="nim">NIM</string>
    <string name="nip">NIP</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="unit">Unit</string>
    <string name="batch">Batch</string>
    <string name="telephone">Telephone</string>
    <string name="error_empty">This field is required</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="phone_format_error">Telephone not valid</string>
    <string name="password_error">Password is too short</string>
    <string name="email_error">Email format is wrong</string>
    <string name="account">Account</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_detail">Edit Profile Detail</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="account_deactivation">Deactivate Account</string>
    <string name="myitem_found">Item That I Found</string>
    <string name="myitem_lost">My Lost Item</string>
    <string name="deactivate_account">Deactivate Account</string>

    <string name="about">About</string>
    <string name="help_center">Help Center</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app"><u>About App</u></string>
    <string name="version_0_0_1_alpha">Version 0.0.1 (Alpha)</string>
    <string name="sign_out">Log Out</string>
    <string name="signout_message">Are you sure want to signout ?</string>
    <string name="logout_confirmation">Are you sure to logout</string>
    <string name="post_history"><u>Post History</u></string>

    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="select_method">Select Method</string>
    <string name="from_camera">Take photo from camera</string>
    <string name="from_gallery">Select from gallery</string>

    <string name="btnMencari">I want to find my item</string>
    <string name="btnMengembalikan">I want to retrieve the item i\'ve found</string>
    <string name="btnMemposting">I want to create a post of the Item i\'ve Lost/Found</string>
    <string name="txtKosong">You don\'t have any post for now. Stay hydrated and have a wonderful day\!</string>
    <string name="imgKosong">Image</string>
    <string name="what_happened">What happened?</string>
    <string name="i_found_something">I found something</string>
    <string name="i_lost_something">I lost something</string>
    <string name="my_post">My Post</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="home_hallo">Hallo, \</string>
    <string name="category_1">Category : \</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="discoverer">Discoverer</string>
    <string name="item_found_location">Item Found Location</string>
    <string name="at_discoverer">At Discoverer</string>
    <string name="at_ukk">At UKK (Campus Security Unit)</string>
    <string name="claimed">Claimed</string>
    <string name="searcher">Searcher</string>
    <string name="item_last_location">Item Last Location</string>
    <string name="item_not_found">Item not found</string>
    <string name="item_found">Item Found</string>
    <string name="description">Description</string>
    <string name="post_date">Post Date</string>
    <string name="create_post">Create Post</string>
    <string name="edit_post_detail">Edit Post Detail</string>
    <string name="edit_post_status">Edit Post Status</string>
    <string name="choose_action">Choose Action</string>
    <string name="item_still_not_found">Item still not found</string>
    <string name="item_at_discoverer">Item at Discover</string>
    <string name="item_at_ukk">Item at UKK (Unit Keamanan Kampus)</string>
    <string name="item_claimed">Item Claimed</string>
    <string name="choose_status">Select Status</string>
    <string name="dialog_home_title_lost">What type of item did you lost?</string>
    <string name="dialog_home_title_found">What type of item did you find ?</string>
    <string name="see_existing_posts">See Existing Posts</string>
    <string name="create_a_new_post">Create a New Post</string>
    <string name="what_do_you_wanna_do">What do you wanna do?</string>
    <string name="search_post">Search Post</string>
    <string name="important_documents">Important Documents</string>
    <string name="gadgets_amp_electronics">Gadgets &amp; Electronics</string>
    <string name="lunch_box_amp_bottles">Lunch Box &amp; Bottles</string>
    <string name="clothes_amp_accessories">Clothes &amp; Accessories</string>
    <string name="stationary_amp_module_book">Stationary &amp; Module Book</string>
    <string name="others">Others</string>
    <string name="i_didnt_find_the_item">I didn\'t find the item</string>
    <string name="filtered_by">Filtered by "</string>
    <string name="quotes">"</string>

    <string-array name="type_post">
        <item>-- Select Type --</item>
        <item>Found</item>
        <item>Lost</item>
    </string-array>


    <string-array name="item_category">
        <item>-- Select Category --</item>
        <item>Important Documents</item>
        <item>Gadgets &amp; Electronics</item>
        <item>Lunch Box &amp; Bottles</item>
        <item>Clothes &amp; Accessories</item>
        <item>Stationary &amp; Module Book</item>
        <item>Others</item>
    </string-array>

    <string name="tv_about_application">Lost and Found IPB is a mobile application that serves as a platform to help people who lost their items and the ones who found them met in IPB University Campus area. This application has a feature to create posts about the item that they\'ve found or the item that they\'ve lost.</string>
    <string name="tv_pass_lama">Old Password</string>
    <string name="tv_pass_baru">New Password</string>
    <string name="tv_konfirm_pass">Confirm New Password</string>
    <string name="btn_save">Save</string>

    <string name="old_password_error">This is not your old password</string>
    <string name="password_not_same">Your new password and confirmation is not the same</string>
    <string name="old_password_same">You can\'t use your old password as your new password</string>

    <string name="confirm_deactivation">Complete your deactivation request by write \'deactivate\' in the given box below</string>
    <string name="deactivate_password">Your password</string>
    <string name="btn_deactivate">Deactivate Account</string>
    <string name="deact_confirm_error">Please fill with \'deactivate\'</string>
    <string name="deact_password_error">Invalid Password, please try again</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_email">Please input your registered email account and we will send you an email to reset your Password</string>
    <string name="btn_forgot_password">Reset Password</string>
</resources>