<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="50dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="60dp"/>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonGroup"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <Button
                android:id="@+id/btnAndroid"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student" />

            <Button
                android:id="@+id/btnFlutter"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecturer" />

            <Button
                android:id="@+id/btnWeb"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded_primary"
            android:layout_marginHorizontal="80dp"
            android:text="@string/register_now"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to"
                android:textColor="@color/black"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/register_tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>







</ScrollView>