<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_background"
    android:backgroundTint="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="What type of item did you lost?"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@+id/dialog_documents"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_feed_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/important_documents"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_electronics"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_devices_other_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gadgets_amp_electronics"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_lunch_box"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_fastfood_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lunch_box_amp_bottles"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>




    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/dialog_clothes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_accessibility_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clothes_amp_accessories"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_stationary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_book_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stationary_amp_module_book"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_others"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_home">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_more_horiz_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/others"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="5dp"/>
        </LinearLayout>




    </LinearLayout>



</LinearLayout>